Fixed: Cropper Edit image overflow issue, Added auto-grow in all Textarea

--- a/src/stylus/_adminStyle.styl
+++ b/src/stylus/_adminStyle.styl
@@ -77,3 +77,6 @@ select.round {
 .meta_background
     background: #efefef;
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+
+    .cropper-modal
+        background: transparent !important;
